--- a/hobbymatcher-ui/package.json
+++ b/hobbymatcher-ui/package.json
@@ -10,10 +10,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.27",
+    "@fortawesome/free-brands-svg-icons": "^5.12.1",
+    "@fortawesome/free-regular-svg-icons": "^5.12.1",
+    "@fortawesome/free-solid-svg-icons": "^5.12.1",
+    "@fortawesome/vue-fontawesome": "^0.1.9",
     "core-js": "^3.4.4",
+    "primeflex": "^1.0.0",
+    "primeicons": "^2.0.0",
+    "primevue": "^1.0.4",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
+    "vue-filter-date-format": "^1.3.1",
     "vue-property-decorator": "^8.3.0",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
