--- a/hobbymatcher_sb/src/main/resources/application.properties
+++ b/hobbymatcher_sb/src/main/resources/application.properties
@@ -1,1 +1,12 @@
-
+server.port=8080
+# Prefix
+server.servlet.context-path=/hobbymatcher
+# Data source
+jdbc.driver=com.mysql.cj.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/hobbymatcher?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
+jdbc.username=root
+jdbc.password=123456
+# Mybatis
+configLocation=mybatis-config.xml
+mapperLocations=/mapper/**.xml
+typeAliasesPackage=com.hobbymatcher.entity
