--- a/hobbymatcher_sb/src/main/resources/application.properties
+++ b/hobbymatcher_sb/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8088
+server.port=8080
 # Prefix
 server.servlet.context-path=/hobbymatcher
 # Data source
@@ -10,3 +10,6 @@ jdbc.password=123456
 configLocation=mybatis-config.xml
 mapperLocations=/mapper/**.xml
 typeAliasesPackage=com.hobbymatcher.entity
+# Security
+spring.security.user.name=admin
+spring.security.user.password=123456
