--- a/hobbymatcher_sb/src/main/resources/application.properties
+++ b/hobbymatcher_sb/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.servlet.context-path=/hobbymatcher
 jdbc.driver=com.mysql.cj.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/hobbymatcher?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
 jdbc.username=root
-jdbc.password=123456
+jdbc.password=
 # Mybatis
 configLocation=mybatis-config.xml
 mapperLocations=/mapper/**.xml
