--- a/hobbymatcher-ui/package.json
+++ b/hobbymatcher-ui/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.12.1",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/vue-fontawesome": "^0.1.9",
+    "axios": "^0.19.2",
     "core-js": "^3.4.4",
     "primeflex": "^1.0.0",
     "primeicons": "^2.0.0",
@@ -25,6 +26,7 @@
     "vue-filter-date-format": "^1.3.1",
     "vue-property-decorator": "^8.3.0",
     "vue-router": "^3.1.3",
+    "vue-toasted": "^1.1.27",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
