--- a/hobbymatcher-ui/package.json
+++ b/hobbymatcher-ui/package.json
@@ -21,6 +21,7 @@
     "primeicons": "^2.0.0",
     "primevue": "^1.0.4",
     "register-service-worker": "^1.6.2",
+    "vee-validate": "^3.2.5",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-filter-date-format": "^1.3.1",
