--- a/hobbymatcher_sb/src/main/resources/application.properties
+++ b/hobbymatcher_sb/src/main/resources/application.properties
@@ -13,3 +13,6 @@ typeAliasesPackage=com.hobbymatcher.entity
 # Security
 spring.security.user.name=admin
 spring.security.user.password=123456
+# OAuth
+security.oauth2.client.client-id=front_end_01
+security.oauth2.client.client-secret=123456
