--- a/hobbymatcher_sb/src/main/resources/application.properties
+++ b/hobbymatcher_sb/src/main/resources/application.properties
@@ -10,9 +10,19 @@ jdbc.password=123456
 configLocation=mybatis-config.xml
 mapperLocations=/mapper/**.xml
 typeAliasesPackage=com.hobbymatcher.entity
+# Session
+#server.servlet.session.timeout=30M
 # Security
 spring.security.user.name=admin
 spring.security.user.password=123456
 # OAuth
 #security.oauth2.client.client-id=front_end_01
 #security.oauth2.client.client-secret=123456
+logging.pattern.level=trace
+# Redis
+#spring.redis.host=localhost
+#spring.redis.port=6379
+#spring.redis.database=0
+#spring.redis.password=
+# spring.session.store-type=redis
+#spring.session.redis.flush-mode= IMMEDIATE
