--- a/hobbymatcher_sb/src/main/resources/application.properties
+++ b/hobbymatcher_sb/src/main/resources/application.properties
@@ -15,14 +15,19 @@ typeAliasesPackage=com.hobbymatcher.entity
 # Security
 spring.security.user.name=admin
 spring.security.user.password=123456
+#logging.pattern.level=trace
 # OAuth
-#security.oauth2.client.client-id=front_end_01
-#security.oauth2.client.client-secret=123456
-logging.pattern.level=trace
+hobbymatcher.security.oauth2.clients[0].clientId=front_end_01
+hobbymatcher.security.oauth2.clients[0].clientSecret=123456
+hobbymatcher.security.oauth2.clients[0].accessTokenValiditySeconds=7200
+hobbymatcher.security.oauth2.clients[1].clientId=test
+hobbymatcher.security.oauth2.clients[1].clientSecret=123456
+hobbymatcher.security.oauth2.clients[1].accessTokenValiditySeconds=7200
+
 # Redis
-#spring.redis.host=localhost
-#spring.redis.port=6379
-#spring.redis.database=0
-#spring.redis.password=
-# spring.session.store-type=redis
-#spring.session.redis.flush-mode= IMMEDIATE
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.database=0
+spring.redis.password=
+spring.session.store-type=redis
+spring.session.redis.flush-mode=IMMEDIATE
