--- a/hobbymatcher_sb/src/main/resources/application.properties
+++ b/hobbymatcher_sb/src/main/resources/application.properties
@@ -31,4 +31,4 @@ spring.redis.password=
 spring.session.store-type=redis
 spring.session.redis.flush-mode=IMMEDIATE
 # Token
-#hobbymatcher.security.oauth2.storeType=jwt
+hobbymatcher.security.oauth2.storeType=jwt
