--- a/hobbymatcher-ui/package.json
+++ b/hobbymatcher-ui/package.json
@@ -25,6 +25,7 @@
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-filter-date-format": "^1.3.1",
+    "vue-filter-date-parse": "^1.1.3",
     "vue-property-decorator": "^8.3.0",
     "vue-router": "^3.1.3",
     "vue-toasted": "^1.1.27",
