--- a/hobbymatcher_sb/src/main/resources/application.properties
+++ b/hobbymatcher_sb/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8080
 server.servlet.context-path=/hobbymatcher
 # Data source
 jdbc.driver=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/hobbymatcher?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
+jdbc.url=jdbc:mysql://3.226.20.89:3306/hobbymatcher?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
 jdbc.username=root
 jdbc.password=123456
 # Mybatis
@@ -24,7 +24,7 @@ hobbymatcher.security.oauth2.clients[1].clientId=test
 hobbymatcher.security.oauth2.clients[1].clientSecret=123456
 hobbymatcher.security.oauth2.clients[1].accessTokenValiditySeconds=7200
 # Redis
-spring.redis.host=localhost
+spring.redis.host=3.226.20.89
 spring.redis.port=6379
 spring.redis.database=0
 spring.redis.password=
