--- a/hobbymatcher-ui/package.json
+++ b/hobbymatcher-ui/package.json
@@ -20,6 +20,7 @@
     "primeflex": "^1.0.0",
     "primeicons": "^2.0.0",
     "primevue": "^1.0.4",
+    "quill": "^1.3.7",
     "register-service-worker": "^1.6.2",
     "vee-validate": "^3.2.5",
     "vue": "^2.6.10",
