--- a/hobbymatcher-ui/.env.development
+++ b/hobbymatcher-ui/.env.development
@@ -1,1 +1,2 @@
-VUE_APP_URL=http://localhost:8080/hobbymatcher
+VUE_APP_REST_API_URL=http://localhost:8080/hobbymatcher
+VUE_APP_URL=http://localhost:8081/
