--- a/hobbymatcher-ui/package.json
+++ b/hobbymatcher-ui/package.json
@@ -30,6 +30,7 @@
     "vue-filter-date-parse": "^1.1.3",
     "vue-property-decorator": "^8.3.0",
     "vue-router": "^3.1.3",
+    "vue-social-sharing": "^2.4.7",
     "vue-toasted": "^1.1.27",
     "vuex": "^3.1.2"
   },
