--- a/hobbymatcher_sb/src/main/resources/application.properties
+++ b/hobbymatcher_sb/src/main/resources/application.properties
@@ -4,7 +4,9 @@ server.servlet.context-path=/hobbymatcher
 # Data source
 jdbc.driver=com.mysql.cj.jdbc.Driver
 # jdbc.url=jdbc:mysql://3.226.20.89:3306/hobbymatcher?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
-jdbc.url=jdbc:mysql://localhost:3306/hobbymatcher?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
+# jdbc.url=jdbc:mysql://localhost:3306/hobbymatcher?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
+jdbc.url=jdbc:mysql://mysql:3306/hobbymatcher?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
+
 jdbc.username=root
 jdbc.password=123456
 # Mybatis
