--- a/hobbymatcher_sb/src/main/resources/fileupload.properties
+++ b/hobbymatcher_sb/src/main/resources/fileupload.properties
@@ -1,2 +1,2 @@
 # specify the location that uploaded files should be stored
-uploadpath=/Users/jone30rw/Documents/workspaces/ssw695/hobbymatcher_sb/uploads
+uploadpath=C:/Users/Jerry/Documents/GitHub/SSW695/hobbymatcher_sb/uploads
